t/group.t [Bodo Schulze]

=item *

Added new primitive, Krang::ElementClass::CheckBoxGroup, 
which integrates with Krang's lists system, in addition
to permitting simple values.  [Jesse Erlbaum]

=item *

Added new option "--makecats" to krang_upload_media and 
krang_upload_templates.  When specified, missing categories
will be created in the CMS, instead of skipped.  [Jesse Erlbaum]

=item *

Fixed bug in Krang::ElementClass::ListGroup where ListItem would not be
added to DataSet.  [Jesse Erlbaum]

=item *

Fixed bug in Krang::ElementClass::Date where date would change if KDS
was exported from a machine in one time zone and imported on a machine
in an earlier time zone.  [Jesse Erlbaum]

=back


=head2 v2.003

=over

=item *

Fixed sql/mypref.sql so that user's don't clobber each others
preferences. [Bodo Schulze]

=item *

Added missing setting of template param 'parent_path' to
Krang::CGI::ElementEditor::find_story_link() [Bodo Schulze]

=item *

Replaced template selector in 'New Template' and 'Find Template'
(advanced search) with category_chooser style template_chooser.
[Bodo Schulze]

=item *

Simplied use of --module option with bin/krang_build [Bodo Schulze]

=item *

Added checkbox to groups manager to allow "admin_lists" to be set.  [Jesse Erlbaum]

=item *

Fixed Kang::Navigation bug where Desks were not being displayed in proper order.
[Aaron Dancygier]

=item *

Fixed ISE when attempting to publish templates and media/stories at the same time
from the UI.
[Michael Peters]

=item *

Fixed ISE when viewing media files from the Scheduler UE.
[Michael Peters]

=back


=head2 v2.002

=over


=item *

Added new script krang_upload_media.  This works similarly to krang_upload_templates.
Using this script you can maintain a media/ directory in your add-on 
which contains all site-specific media.  This is particularly useful for
development, when developing templates and site design.  The script
krang_createdb now automatically loads any media found in your